@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/bsd">BSD</license>
  <notes>
+* [jan] Validate start and end dates of vacation rules (Request #10879).
 * [mms] Application initialization should only be done on first access.
  </notes>
  <contents>
