@@ -2,6 +2,7 @@
 v2.1-git
 --------
 
+[jan] Validate start and end dates of vacation rules (Request #10879).
 
 
 ----------
